[gd_scene load_steps=15 format=2]

[ext_resource path="res://interfaces/fonts/Montserrat-ExtraBold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://interfaces/UserInterface.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://interfaces/label-font.tres" type="DynamicFont" id=4]
[ext_resource path="res://interfaces/GitHistory.gd" type="Script" id=5]
[ext_resource path="res://interfaces/GitHistory.tscn" type="PackedScene" id=6]
[ext_resource path="res://screens/PlayScreen.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.337255, 0.32549, 0.819608, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.337255, 0.32549, 0.819608, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.294118, 0.290196, 0.584314, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 4 )
Label/styles/normal = null

[sub_resource type="DynamicFont" id=4]
size = 76
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("InterfaceLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="PlayScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="InterfaceLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserInterface" parent="InterfaceLayer/Interface" instance=ExtResource( 2 )]

[node name="GitHistory" parent="InterfaceLayer/Interface" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -380.0
margin_top = -241.0
margin_right = 380.0
margin_bottom = 0.0
rect_clip_content = true
script = ExtResource( 5 )

[node name="EndMenu" type="Control" parent="InterfaceLayer/Interface"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="InterfaceLayer/Interface/EndMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.45098 )

[node name="Label" type="Label" parent="InterfaceLayer/Interface/EndMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -340.0
margin_bottom = -160.0
custom_fonts/font = SubResource( 4 )
text = "You missed 3 releases, the project was discontinued :("
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="InterfaceLayer/Interface/EndMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -40.0
margin_right = 140.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 140, 40.5 )
text = "Retry"

[node name="Fade" type="ColorRect" parent="InterfaceLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "fade"
anims/fade = SubResource( 3 )
[connection signal="button_up" from="InterfaceLayer/Interface/EndMenu/RetryButton" to="." method="_on_RetryButton_button_up"]
